# radio_calico

./: .dockerignore  .gitignore  CI_CD_README.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  app.py  app_optimized.py  app_prod.py  architecture.md  database.db  docker-compose.override.yml  docker-compose.yml  index.html  index_bak.html  index_optimized.html  init-db.sql  nginx.conf  optimize_images.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run_js_tests.js  run_tests.py  test_app.py  test_javascript.js
.github/workflows/: ci-cd.yml
scripts/: build.sh  deploy-prod.sh  deploy.sh
static/: index.html  script.js  script_optimized.js  styles.css  sw.js
tests/: __init__.py  conftest.py  test_app.py
